--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,5 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <div>TODO write content</div>
+        <h1>Pagina inicial</h1>
+        <p>Esta es la primera pagina del curso WEB y Patrones...</p>
     </body>
 </html>
